fix: prevent overflow on body for position: fixed elements

--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -12,6 +12,7 @@
 /* body family */
 body {
   font-family: var(--font-inter);
+  overflow: hidden;
 }
 
 p {
